--- a/Kinovea.ScreenManager/PlayerScreen/Controls/PlayerScreenUserInterface2.resx
+++ b/Kinovea.ScreenManager/PlayerScreen/Controls/PlayerScreenUserInterface2.resx
@@ -127,9 +127,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACc
-        CgAAAk1TRnQBSQFMAgEBBAEAAeABAAHgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABg
+        CQAAAk1TRnQBSQFMAgEBAwEAAfABAAHwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -156,24 +156,19 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ALAACRg4A
-        AnIIAAHxCrsB8RoAAkYOAAJyCAABuwH0CP8B9AG7FwAB/wHxAfcCRgH3AfEB/wkAAfAEcgEIBgABuwr/
-        AbsFAAPPAQADtgEAA9IHAAG8AfcB8wJGAfMB9wG8CgAB8AJyAQgHAAG7Cv8BuwUAA88BAAO2AQAD0gUA
-        Af8BvAL/AQACRgEAAv8BvAH/CQAB8AEICAABuwX/AW0B7wHzAv8BuwUAA88BAAO2AQAD0gUAAfEB9wH/
-        AgAC/wIAAf8B9wHxBAAB8AoAAfADAAG7Bf8BHAJRAZkB/wG7FQAB9wHzCAAB8wH3BAABcgHwAgAB8wJv
-        AfMCAAHwAXIDAAG7Bf8B8wFRAXQBeQEaAbsFAAMIAQADlwEAA9sDAAVGAf8BAAKTAQAB/wVGBHIB8AEA
-        AW8CFgFvAQAB8ARyAQABuwb/ARwBeQGgAXkBHAUAAwgBAAOXAQAD2wMABUYB/wEAApMBAAH/BUYEcgEI
-        AQABbwIWAW8BAAHwBHIBAAG7B/8BmQF5AaABeQEbBAADCAEAA5cBAAPbBQAB9wHzCAAB8wH3BAABcgEI
-        AgAB8wJvAfMCAAHwAXIDAAG7CP8BmQF5AaABeQEaEwAB8AH3Af8CAAL/AgAB/wH3AfEEAAEICgAB8AMA
-        AbsJ/wGZAXkBbwFGARsCAAPjAQADdQEAA3oFAAH/AbwB/wIAAkYBAAL/AbwB/wkAAvAIAAG7Cv8BdAFG
-        ARYBbwIAA+MBAAN1AQADegcAAbwB9wHzAkYB8wH3AbwKAAHwAnIB8AcAAbsB9AEHAe0B/wEHAe0B/wEH
-        Ae0B9AG7ARoBRgGTAgAD4wEAA3UBAAN6BwAB/wHwAfcCRgH3AfEB/wkAAfAEcgHwBgAB8QK7AewCuwHs
-        ArsB7AG7AfEBAAH/GAACRg4AAnILAAH3AgAB9wIAAfccAAJGDgACcgcAAUIBTQE+BwABPgMAASgDAAFA
-        AwABIAMAAQEBAAEBBgABARYAA/+BAAT/Af4BfwH+AX8BgAEHAv8B/gF/Af4BfwGAAQcC/wHwAQ8B+AEf
-        AYABBwHEAUcB8AEPAfwBPwGAAQcBxAFHAcIBQwH+AX8BgAEHAcQBRwHGAWMB3wH7AYABBwL/Ac8B8wHM
-        ATMBgAEHAcQBRwECAUABBAEgAYABBwHEAUcBAgFAAQQBIAGAAQMBxAFHAc8B8wHMATMBgAEBAv8BxgFj
-        Ad8B+wGAAQABxAFHAcYBQwH+AX8BgAEAAcQBRwHwAQ8B/AE/AYABAAHEAUcB8AEPAfgBHwGAAQUC/wH+
-        AX8B/gF/AfYB3wL/Af4BfwH+AX8L
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/0IAAfEKuwHxNAABuwH0
+        CP8B9AG7NAABuwr/AbsFAAPPAQADtgEAA9IGAArVFAABuwr/AbsFAAPPAQADtgEAA9IGAAHVCAAB1RQA
+        AbsF/wFtAe8B8wL/AbsFAAPPAQADtgEAA9IGAAHVAQAG1QEAAdUUAAG7Bf8BHAJRAZkB/wG7FgAB1QEA
+        AdUEAAHVAQAB1RQAAbsF/wHzAVEBdAF5ARoBuwUAAwgBAAOXAQAD2wMAA+cB1QHnAdUE5wHVAecB1QPn
+        EQABuwb/ARwBeQGgAXkBHAUAAwgBAAOXAQAD2wYAAdUBAAHVBAAB1QEAAdUUAAG7B/8BmQF5AaABeQEb
+        BAADCAEAA5cBAAPbBgAB1QEAAdUEAAHVAQAB1RQAAbsI/wGZAXkBoAF5ARoUAAHVAQAG1QEAAdUUAAG7
+        Cf8BmQF5AW8BRgEbAgAD4wEAA3UBAAN6BgAB1QgAAdUUAAG7Cv8BdAFGARYBbwIAA+MBAAN1AQADegYA
+        CtUUAAG7AfQBBwHtAf8BBwHtAf8BBwHtAfQBuwEaAUYBkwIAA+MBAAN1AQADeiQAAfECuwHsArsB7AK7
+        AewBuwHxAQAB/zUAAfcCAAH3AgAB9zUAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcA
+        A/8BAAb/AgABgAEHBP8CAAGAAQcE/wIAAYABBwHEAUcB4AEHAgABgAEHAcQBRwHvAfcCAAGAAQcBxAFH
+        AegBFwIAAYABBwL/AesB1wIAAYABBwHEAUcEAAGAAQcBxAFHAesB1wIAAYABAwHEAUcB6wHXAgABgAEB
+        Av8B6AEXAgABgAEAAcQBRwHvAfcCAAGAAQABxAFHAeABBwIAAYABAAHEAUcC/wIAAYABBQT/AgAB9gHf
+        BP8CAAs=
 </value>
   </data>
   <metadata name="stripDrawingTools.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
