Menu to trim tracks from trackable drawing.
Plus various small fixes and icons.

--- a/Kinovea.ScreenManager/Properties/Drawings.resx
+++ b/Kinovea.ScreenManager/Properties/Drawings.resx
@@ -331,68 +331,6 @@
         FN2X9OMJg3ZBOE5pJC/FNrONs+iqgv+gWtSCalELqsW/A+4DsJ6p8oa917wAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="trackingplay" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAC00lEQVQ4T5WQW0jTYRjGXwiEoFuh6y7q
-        wlrm3MHcnNucibBCCVJR07UtdWr/mac2D6lgExWPKJIVTZRa5tg8RIoZUxeaZysSO8wS7GDb3Dxu6tt/
-        k2GBFF78vuP7vN/3PICIh2YtXEisCsJMdg6fOLDgf6zyL3zdbmpEW0DQwoEF/2KVF+plZ/M+2phsywo1
-        4PA/sLG4lSsMVq/Vj3nEtT+wyIOgcJoIyZ9Y4CleE669LTA4YoXOWrSeY3h7asApS9Y6r0ucjmsirefQ
-        Az9vfLFZN4XEg36MkT0d/8bkrldG5pcwZD2ltCS9iSrtIMAplTh3u/W4FRe3sxkVTd8Xj3G4t0asnOzh
-        5VCiT7nE4M53CCQ9dFn3E/8knbPi4Uv0FWlMsJWYoN2KjXVuXoma2Yi8/GldeGnkUXyxmpdjXAjKHuK4
-        mpFhNVkpNJ2nuZ+4nfAVPf5Cudq6F+LFO89A2jwCpF+vKnFd35hQZLOy+T/IsN6RYW1bzviv5Y1moHxQ
-        imkvRChV690al9Y9hBW0u/we5ypGjZwcYys703CUDMuXDGtnt6EezafObucMp2PLh0asnCjC9OdiFJbV
-        7zUQFEwRpN8l0u8y6TdLpZmDn7sIZgeCxcdPaz5Jcf464aO9OZCC9+dq8R5J0XAOJmqiUdggoANPOWaq
-        a59G0u/30PxOkDcZoEzzHiY/W8C+7gD7mgOmybVEl4iNbyuwZDIba9+oMLNXhiHlbITg3FdEUNagiZUx
-        QCSrWiAkVwvxFX0grzNAZs0QyKsGIbV6AGLborF6phQVo+lYPl2MaV1iZN2mbbh9uDAajTA7Owv9AwYI
-        lDUDLbUNGDc63LjWkXcjsGyiEFWTBZiiF+H5An8HNZtCd4u7urq8SWB+fh70nZ1wNiYPTkcp/yK8RrBR
-        NJqLSboEZCqppGzvYfegVquPkbhmN57LP+GpAs3h1XxkKvbFiAi/ATP1cvAH091lAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="track" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAABuklEQVQ4T2P4//8/RRirICH81cu34Iur
-        x4PP9s4FWBUQwl+c3R//mTn9/ydLu4dYFeDDX5zc2D7bOt39ZGH7/qOxJeku+GTj2PvR3GbXByMLZhAf
-        qyIYdq2/WOBSe+6hU9XpAhD/k7VD4EczmycfDM1FYWoYfmdnrv+dnvr7V3LSepggDDvXnH0yZ+OF/wXz
-        9/6Pyl579oWF47feoNpm8+xtbaYZmx4Yp60rYPidlvr739ZN/3/Gxv79ERFphtB8xt6x8uQH+7Kjb9wK
-        dlc/N3e8vc41dZtZ9tbVJhkbf/csPPDfIGnVA4afiQnrf8bE/P4RHnHpe1DIvW++/idXxDUtcio/9tCu
-        7Ig9yDBgYM38oGe6EWa4UcqaAoOklY/04peiBiLQv2z9KZN3n/FN+vTB1vkVMLCuAQPrz3tdk6/vNQz4
-        kdXCMJwB9K+EY9WpY/blx5balhziBAaWATCw/v6bNuX/O3X9P8iakDGDa92FAqB/nwP9+wbo31Jkyffa
-        Ruvfqen9fqukjRHAMMzgVH3mweQ1F/8D/fsSmwJCmMGh4niBXenhBzZF+8FxTSrGKkgKxipIPP7PAADG
-        9LhBxYfuYQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="trackstop" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAACNklEQVQ4T2P4//8/yfirl2/BF1ePB5/t
-        nQuwKiCEvzi7P/4zc/r/T5Z2D7EqwIe/OLmxfbZ1uvvJwvb9R2NL0l3wycax96O5za4PRhbMID5WRTDs
-        Wn+xwKX23EOnqtMFIP4na4fAj2Y2Tz4YmovC1DD8zs5c/zs99fev5KT1MEEYdq45+2TOxgv/C+bv/R+V
-        vfbsCwvHb71Btc3m2dvaTDM2PTBOW1fA8Dst9fe/rZv+/4yN/fsjItIMofmMvWPlyQ/2ZUffuBXsrn5u
-        7nh7nWvqNrPsratNMjb+7ll44L9B0qoHDD8TE9b/jIn5/SM84tL3oJB733z9T66Ia1rkVH7soV3ZEXuQ
-        YcDAmvlBz3QjzHCjlDUFBkkrH+nFL0UNRKB/2fpTJu8+45v06YOt8ytgYF0DBtaf97omX99rGPAjq4Vh
-        OAPoXwnHqlPH7MuPLbUtOcQJDCwDYGD9/Tdtyv936vp/kDUhYwbXugsFQP8+B/r3DdC/pciS77WN1r9T
-        0/v9Vkl7/cfIqP+fxcT+fxQV/f8OiN+IiPx/Lix8n8Gp+syDyWsu/gf69yWyZnQM0vg1KOj/F3///x99
-        fP6/9/D4/0BI6D+DQ8XxArvSww9sivaD4xoXBtkI0vjWwOD/Kx2d/68cHf9fFxDArhgbfgy07a2r6//n
-        Ghr/n6qo/H9mbf3/HB8fdsXY8C1Bwf8v7O3BGh9bWPx/aGLy/ygPD3bF2PBlfv7rIBtP8/KCNR4B4gPc
-        3O8Aqn+a1jthuDkAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="tracktrim" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAABr0lEQVQ4T2P4//8/yfirly/DF1cPhs/2
-        zgxYFRDCX5zdGf7MnM7wydKOdAO+OLkxfLZ1YvhkYcvw0diSdAM+2TgyfDS3YfhgZMEM4mNVBMOu9RcL
-        XGrPPXSqOl0A4n+ydmD4aAbUbGgOV8PwOztz/e/01N+/kpPWwwRh2Lnm7JM5Gy/8L5i/939U9lqGFxaO
-        DL1BtQzm2dsYTDM2MRinrQMakJb6+9/WTf9/xsb+/RERaYbQfMbesfLkB/uyo2/cCnZXPzd3ZFjnmspg
-        lr2VwSRjI0PPwgMMBkmrGBh+Jias/xkT8/tHeMSl70Eh9775+p9cEde0yKn82EO7siP2IMNAgfVBzxTu
-        MqOUNUDNKxn04peihgHQv2z9KZN3n/FN+vTB1vkVMLCuAQPrz3tdk6/vNQz4kdXCMJwB9K+EY9WpY/bl
-        x5balhziBAaWATCw/v6bNuX/O3X9P8iakDGDa92FAqB/nwP9+wbo31JkyffaRuvfqen9fqukjRHAMMzg
-        VH3mweQ1F/8D/fsSmwJCmMGh4niBXenhBzZF+8FxTSrGKkgKxipICsYqSDz+zwAAydiira8mt+EAAAAA
-        SUVORK5CYII=
-</value>
-  </data>
   <data name="trajconffocus" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAgCAYAAABU1PscAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
@@ -1034,7 +972,19 @@
   <data name="play_green2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\play-green2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="trajectory6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\trajectory6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="tracking" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tracking.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tracking_delete" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tracking_delete.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tracking_start" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tracking_start.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tracking_stop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tracking_stop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tracking_trim" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tracking_trim.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
