Navigation pane: Add button to manually refresh the camera list.

--- a/Kinovea.FileBrowser/UserInterface/FileBrowserUserInterface.resx
+++ b/Kinovea.FileBrowser/UserInterface/FileBrowserUserInterface.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="tabPageShortcuts.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
   <metadata name="imgListFiles.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>212, 17</value>
   </metadata>
@@ -128,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAC4
-        BwAAAk1TRnQBSQFMAwEBAAFoAQIBaAECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        BwAAAk1TRnQBSQFMAwEBAAFwAQIBcAECARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
         AUADAAEQAwABAQEAAQgGAAEEGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
         AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
         AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
@@ -164,6 +161,9 @@
         Cw==
 </value>
   </data>
+  <metadata name="tabPageShortcuts.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="imgListTabs.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -171,82 +171,82 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABa
-        EQAAAk1TRnQBSQFMAgEBBAEAAXABAgFwAQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABY
+        EQAAAk1TRnQBSQFMAgEBBAEAAXgBAgF4AQIBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8ARgADGQQjATMDIwEz
         AyMBMwMjATMDIwEzAxkBIwwAAzgBWwMGAQcYAAMGAQcDOAFbsAABWQJaAcABNgGUAdAB/wE1AZIBzwH/
-        ATUBkgHOAf8BNAGSAc8B/wE0AZQB0AH/AVkCWgHADAABXAJfAcgBXQFoAXUB7AM9AWcDAwEECAAEAgM1
-        AVYBWgFkAW8B6QFaAl0BxxQAAzABSwNdAckDYAHoA2AB6ANgAegDYAHoA2AB6ANgAegDYAHoA2AB6ANd
+        ATUBkgHOAf8BNAGSAc8B/wE0AZQB0AH/AVkCWgHADAABXAJfAcgBXQFnAXIB7AM9AWcDAwEECAAEAgM1
+        AVYBWgFjAW0B6QFaAl0BxxQAAzABSwNdAckDYAHoA2AB6ANgAegDYAHoA2AB6ANgAegDYAHoA2AB6ANd
         AckDMAFLbAABMQGTAdEB/wGpAfkC/wGPAfAC/wGPAe8C/wGNAfAC/wHSA/8BNAGUAdAB/wwAAVACUQGc
-        AWkBlQHTAf8BXAF0AYoB9AFhAWoBbAHmAzYBWQM2AVgBYAFlAWcB4wFcAXEBhQHyAWkBlQHTAf8BUAJR
-        AZwUAANZAcADSQH2AyEB/wMgAf8DIAH/AyAB/wMgAf8DIAH/AyAB/wMhAf8DSQH2A1kBwFgAAyMBMwMj
-        ATMDIwEzAyMBMwMjATMBKQGQAdEB/wG3AfMC/wFtAeAB/QH/AW0B4AH9Af8BbAHgAf4B/wHaAf4C/wEx
-        AZIBzwH/DAADPgFpAWoBdgGOAfUBowHOAv8BjAG2Ae0B/wFgAW8BhQHzAWABbwGFAfMBiwG2Ae0B/wGj
-        Ac4C/wFqAXYBjgH1Az4BaRQAA1sB0AMPAf8DBQH/AwUB/wMFAf8DBQH/AwUB/wMFAf8DBQH/AwoB/wMk
-        Af8DWwHQCAADFwEfA10BxwF/AXkBXwH8AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4
-        AV4B/wGcAXgBXgH/AX8BeQFfAfwDXAHGAxYBHgwAAykBPhAAAY0CjAH/AY0CjAH/AY0CjAH/AY0CjAH/
-        AY0CjAH/ASYBjwHSAf8BzgH3Av8BtQHuAf4B/wHbAfkC/wHdAfsC/wHiA/8BMwGUAdAB/wwAAykBPgFe
-        AWoBegHwAaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AV4BagF6AfADKQE+FAADUgGg
-        AcECtQH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AesC2wH/AcECtQH/AyUB/wNb
-        AcoIAANfAcgBrAGNAX4B/AHfAdMBuAH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHgAdUBugH/Ad8B0wG4Af8BqwGKAX4B/ANdAccEAAMlATcDWwHAAZwBeAFeAf8QAAGNAowB/xAA
-        ASoBkgHTAf8B3AH9Av8B2gH7Av8BKgGNAc0B/wEvAZEBzgH/ATMBlAHQAf8DVQGuDAADEQEWAVwBdQGW
-        AfgBowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BXAF1AZYB+AMRARYUAANCAXQB5ALY
-        Af8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8B4wLXAf8DKAH/A1kBxggA
-        AX4BeAFfAfwB3wHTAbgB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8B3gHTAbgB/wF/AXgBXwH8A1oBvQF+AW8BYAHzAb4BrwGVAf0BnAF4
-        AV4B/xAAAY0CjAH/EAABXgFjAWUB4gEyAZMB0AH/ATEBkgHPAf8BXAJhAdYDIwEzAyMBMwMZASMIAAME
-        AQUBVgJXAbUBZAF1AYwB9AGjAc0B/gH/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzQH+Af8BYAF1
-        AZAB9gFYAloBtwMEAQUQAANCAXMB3gLWAf8B1QLNAf8BzgLHAf8BzALGAf8BygLEAf8ByALCAf8BxgLB
-        Af8B0ALJAf8B2wLSAf8DKwH/A1kBwwgAAZwBeAFeAf8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wGcAXgBXgH/
-        Ab4BrQGSAf0B3gHTAbgB/wHgAdUBugH/AZwBeAFeAf8QAAGNAowB/xAAA1YBsgE0AZMBzwH/ATQBkQHO
-        Af8BNAGSAc4B/wE0AZIBzwH/ATQBlAHQAf8DWQG+BAADBQEGA1gBuAFaAXABigH1AaABywH9Af8BowHO
-        Av8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BoQHMAf0B/wFaAXEBjQH1AVkCXAG+AwYBCAwA
-        A0ABcQHeAtwB/wEcAhsB/wMAAf8DAAH/AwAB/wMAAf8DAAH/AxcB/wHSAswB/wMuAf8DWQHACAABnAF4
-        AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
-        AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8BnAF4
-        AV4B/wMcAScDIwEzAyMBMwMjATMBjQKMAf8DIwEzAyABLggAATIBkwHRAf8BqQH5Av8BjwHwAv8BjwHv
-        Av8BjQHwAv8B0gP/ATQBlAHQAf8DBQEGAVgCWgG6AVoBcQGMAfUBoQHLAf0B/wGjAc4C/wGjAc4C/wGj
-        Ac4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGhAcsB/gH/AWMBdgGRAfYBWQJbAcADBgEI
-        A0sBjQNAAXADTgGUA+QB/wMCAf8BAAE1AZYB/wEAATUBlgH/AQABOAGZAf8BAAGoAb4B/wEAAT8BngH/
-        AwIB/wHKAscB/wMxAf8DVwG8CAABnAF4AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
-        AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8B4AHV
-        AboB/wHgAdUBugH/AeAB1QG6Af8BnAF4AV4B/wNdAdEBOQGXAdEB/wE2AZQB0AH/ATIBkgHQAf8BLwGR
-        AdAB/wExAZIB0QH/AV0BZQFoAewDIwEzAyMBMwEqAZAB0QH/AbcB8wL/AW0B4AH9Af8BbQHgAf0B/wFs
-        AeAB/gH/AdoB/gL/ATEBkgHPAf8DSQGIAVwBdAGWAfgBWgFuAYcB9QFbAWkBdwHvAWkBdgGOAfUBeQGk
-        Ad8B/wGaAcUB+AH/AaMBzgL/AaMBzgL/AZoBxQH4Af8BeQGkAd8B/wFpAXYBjgH1AVsBaQF3Ae8BWgFu
-        AYcB9QFcAXQBlgH4A0kBiANXAbkDYAHbA54B/wPmAf8DDQH/AQABHAE+Af8BAAEnAYgB/wEAATwBmgH/
-        ARgB2gHnAf8BAAGrAcUB/wMNAf8DxQH/AzQB/wNXAbkIAAGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHg
-        AdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6
-        Af8BnAF4AV4B/wG+Aa0BkgH9Ad4B0wG4Af8B4AHVAboB/wGcAXgBXgH/ATkBlwHRAf8BSgGmAdkB/wGC
-        AeMB/QH/AYYB6wL/AYMB6gL/AYUB7AL/AUcBswHkAf8BjQKMAf8BjQKMAf8BJwGQAdIB/wHOAfcC/wG1
-        Ae4B/gH/AdsB+QL/Ad0B+wL/AeID/wEzAZQB0AH/CAADFQEcAysBQgM9AWcDWAG4AWMBeAGTAfYBowHO
-        Av8BowHOAv8BYwF4AZMB9gNYAbgDPQFnAysBQgMVARwIAANYAbcD6wH/A7kB/wPqAf8DGQH/AgABEAH/
-        AQABigGrAf8BAAHBAd4B/wEsAfwB/gH/AQEB2AHvAf8DGQH/A+AB/wM3Af8DWAG3CAABfgF4AV8B/AHf
-        AdMBuAH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6
-        Af8B4AHVAboB/wHeAdMBuAH/AX8BeQFfAfwDWgG9AX4BbwFgAfMBvgGvAZUB/QGcAXgBXgH/ATYBlQHQ
-        Af8BoAHlAfsB/wE+AacB3QH/Ad0B+gL/AdoB+QL/AdsB+gL/Ad0B/AL/AV0CXwHOBAABLAGSAdIB/wHc
-        Af0C/wHaAfsC/wEqAY0BzQH/AS8BkQHOAf8BMwGUAdAB/wNWAbAUAAMMARABUwFoAYUB9AGXAcIB9gH/
-        AZgBwwH3Af8BUwFoAYUB9AMOARIUAANVAbQD8gH/A78B/wPnAf8DJQH/AQABjwGvAf8BAAG6AdwB/wEA
-        Ab0B3gH/AQABygHkAf8BAAG/Ad8B/wMlAf8D5wH/AzoB/wNVAbQDVQG0A0kBhwNfAckBrAGNAX4B/AHf
-        AdMBuAH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/Ad8B0wG4
-        Af8BrAGNAX4B/ANdAccEAAMlATcDWwHAAZwBeAFeAf8BMwGTAc8B/wHBAfcC/wFHAbUB5QH/ASUBiQHK
-        Af8BJQGKAcsB/wEoAYwBzAH/AS8BkgHPAf8BNQGXAdMB/wQAA1UBrAEzAZQB0AH/ATMBlAHQAf8BUgJU
-        AagkAANKAYkBYwF4AZQB9gFsAYQBnwH3A0oBiRgAA1YBsgP3Af8DygH/A/cB/wMvAf8BAAGuAdAB/wEA
-        Aa4B0AH/AQABrgHQAf8BAAGvAdAB/wEAAa4B0AH/Ay8B/wPwAf8DgQH/A1YBsgNlAewDVgGyAxcBHwNf
-        AckBfgF4AV8B/AGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wF+
-        AXgBXwH8A18ByAMWAR4MAAMpAT4BMQGSAc8B/wHSAfkC/wG2AfAC/wHcAf0C/wHfA/8B5QP/ATQBlQHQ
-        Af88AAMOARIBWgFuAYcB9QFaAW4BhwH1Aw4BEhgAA1UBrwNhAdoDxAH/A/wB/wOKAf8DNwH/AzcB/wM3
-        Af8DNwH/AzcB/wOKAf8D+AH/A4kB/wM2Af8DnQH/A1UBr0AAATMBlAHQAf8B3AH9Av8B2gH7Av8BKwGP
-        Ac0B/wEwAZIBzwH/ATQBlQHQAf8DVQGvQAADSwGMA0sBixwAA0cBggM9AWcDSwGNBP8DywH/A/4B/wP+
-        Af8D/gH/A/4B/wP+Af8DywH/A/4B/wOcAf8DVQGtA2EB6wNVAa1AAAFZAmcB7wEzAZQB0AH/ATMBlAHQ
-        Af8BXAJlAedMAAMPARMDDwETJAADMQFNAzwBZgM8AWYDPAFmAzwBZgM8AWYDPAFmAzwBZgM8AWYDPAFm
-        A1UBrANGAYEDVQGsA0YBgUAAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAH/
-        AYAC5wX/AYAB4QGHAcABAwP/AYAB4AEHAcABAwL/AfABAAHgAQcBwAEDAQABDgHwAQAB4AEHAcABAwEA
-        AQgB9wGAAeABBwHAAQMCAAH3AYABwAEDAcABAwIAAfcCgAEBAcABAwIAAQEBgAMAAQMHAAEDBAABwAED
-        AQABAwMAAYAB+AEfAwABCAEAAYcB/AE/AwABDgEBAf8B/AE/AgAC/wEBAf8B/gF/AgAC/wEPAf8B/gF/
-        AcABAAL/Cw==
+        AWkBlQHTAf8BXAFzAYYB9AFhAmoB5gM2AVkDNgFYAWABZQFmAeMBXAFvAYEB8gFpAZUB0wH/AVACUQGc
+        FAADWQHAA0kB9gMhAf8DIAH/AyAB/wMgAf8DIAH/AyAB/wMgAf8DIQH/A0kB9gNZAcBYAAMjATMDIwEz
+        AyMBMwMjATMDIwEzASkBkAHRAf8BtwHzAv8BbQHgAf0B/wFtAeAB/QH/AWwB4AH+Af8B2gH+Av8BMQGS
+        Ac8B/wwAAz4BaQFqAXMBiQH1AaMBzgL/AYwBtgHtAf8BYAFvAYMB8wFgAW8BgwHzAYsBtgHtAf8BowHO
+        Av8BagFzAYkB9QM+AWkUAANbAdADDwH/AwUB/wMFAf8DBQH/AwUB/wMFAf8DBQH/AwUB/wMKAf8DJAH/
+        A1sB0AgAAxcBHwNdAccBfgF5AV8B/AGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/AZwBeAFe
+        Af8BnAF4AV4B/wF+AXkBXwH8A1wBxgMWAR4MAAMpAT4QAAGNAowB/wGNAowB/wGNAowB/wGNAowB/wGN
+        AowB/wEmAY8B0gH/Ac4B9wL/AbUB7gH+Af8B2wH5Av8B3QH7Av8B4gP/ATMBlAHQAf8MAAMpAT4BXgFp
+        AXgB8AGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wFeAWkBeAHwAykBPhQAA1IBoAHB
+        ArUB/wHrAtsB/wHrAtsB/wHrAtsB/wHrAtsB/wHrAtsB/wHrAtsB/wHrAtsB/wHBArUB/wMlAf8DWwHK
+        CAADXwHIAaoBigF+AfwB3wHTAbgB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6
+        Af8B4AHVAboB/wHfAdMBuAH/AakBhwF+AfwDXQHHBAADJQE3A1sBwAGcAXgBXgH/EAABjQKMAf8QAAEq
+        AZIB0wH/AdwB/QL/AdoB+wL/ASoBjQHNAf8BLwGRAc4B/wEzAZQB0AH/A1UBrgwAAxEBFgFcAXUBlAH4
+        AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AVwBdQGUAfgDEQEWFAADQgF0AeQC2AH/
+        AeMC1wH/AeMC1wH/AeMC1wH/AeMC1wH/AeMC1wH/AeMC1wH/AeMC1wH/AeMC1wH/AygB/wNZAcYIAAF+
+        AXgBXwH8Ad8B0wG4Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6
+        Af8B4AHVAboB/wHgAdUBugH/Ad4B0wG4Af8BfgF4AV8B/ANaAb0BewFvAWAB8wG+Aa8BlQH9AZwBeAFe
+        Af8QAAGNAowB/xAAAV4BYwFlAeIBMgGTAdAB/wExAZIBzwH/AVwCYQHWAyMBMwMjATMDGQEjCAADBAEF
+        AVYCVwG1AWQBdAGJAfQBowHNAf4B/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc4C/wGjAc0B/gH/AWABdAGN
+        AfYBWAJaAbcDBAEFEAADQgFzAd4C1gH/AdUCzQH/Ac4CxwH/AcwCxgH/AcoCxAH/AcgCwgH/AcYCwQH/
+        AdACyQH/AdsC0gH/AysB/wNZAcMIAAGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6
+        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8BnAF4AV4B/wG+
+        Aa0BkgH9Ad4B0wG4Af8B4AHVAboB/wGcAXgBXgH/EAABjQKMAf8QAANWAbIBNAGTAc8B/wE0AZEBzgH/
+        ATQBkgHOAf8BNAGSAc8B/wE0AZQB0AH/A1kBvgQAAwUBBgNYAbgBWgFvAYcB9QGgAcsB/QH/AaMBzgL/
+        AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaMBzgL/AaEBzAH9Af8BWgFwAYkB9QFZAlwBvgMGAQgMAANA
+        AXEB3gLcAf8BHAIbAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wMXAf8B0gLMAf8DLgH/A1kBwAgAAZwBeAFe
+        Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHg
+        AdUBugH/AeAB1QG6Af8B4AHVAboB/wGcAXgBXgH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AZwBeAFe
+        Af8DHAEnAyMBMwMjATMDIwEzAY0CjAH/AyMBMwMgAS4IAAEyAZMB0QH/AakB+QL/AY8B8AL/AY8B7wL/
+        AY0B8AL/AdID/wE0AZQB0AH/AwUBBgFYAloBugFaAXABiQH1AaEBywH9Af8BowHOAv8BowHOAv8BowHO
+        Av8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BowHOAv8BoQHLAf4B/wFjAXUBjgH2AVkCWwHAAwYBCANL
+        AY0DQAFwA04BlAPkAf8DAgH/AQABNQGWAf8BAAE1AZYB/wEAATgBmQH/AQABqAG+Af8BAAE/AZ4B/wMC
+        Af8BygLHAf8DMQH/A1cBvAgAAZwBeAFeAf8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHg
+        AdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wGcAXgBXgH/AeAB1QG6
+        Af8B4AHVAboB/wHgAdUBugH/AZwBeAFeAf8DXQHRATkBlwHRAf8BNgGUAdAB/wEyAZIB0AH/AS8BkQHQ
+        Af8BMQGSAdEB/wFdAWUBZwHsAyMBMwMjATMBKgGQAdEB/wG3AfMC/wFtAeAB/QH/AW0B4AH9Af8BbAHg
+        Af4B/wHaAf4C/wExAZIBzwH/A0kBiAFcAXQBlAH4AVoBbgGFAfUBWwFnAXUB7wFpAXMBiQH1AXkBpAHf
+        Af8BmgHFAfgB/wGjAc4C/wGjAc4C/wGaAcUB+AH/AXkBpAHfAf8BaQFzAYkB9QFbAWcBdQHvAVoBbgGF
+        AfUBXAF0AZQB+ANJAYgDVwG5A2AB2wOeAf8D5gH/Aw0B/wEAARwBPgH/AQABJwGIAf8BAAE8AZoB/wEY
+        AdoB5wH/AQABqwHFAf8DDQH/A8UB/wM0Af8DVwG5CAABnAF4AV4B/wHgAdUBugH/AeAB1QG6Af8B4AHV
+        AboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
+        AZwBeAFeAf8BvgGtAZIB/QHeAdMBuAH/AeAB1QG6Af8BnAF4AV4B/wE5AZcB0QH/AUoBpgHZAf8BggHj
+        Af0B/wGGAesC/wGDAeoC/wGFAewC/wFHAbMB5AH/AY0CjAH/AY0CjAH/AScBkAHSAf8BzgH3Av8BtQHu
+        Af4B/wHbAfkC/wHdAfsC/wHiA/8BMwGUAdAB/wgAAxUBHAMrAUIDPQFnA1gBuAFjAXcBkAH2AaMBzgL/
+        AaMBzgL/AWMBdwGQAfYDWAG4Az0BZwMrAUIDFQEcCAADWAG3A+sB/wO5Af8D6gH/AxkB/wIAARAB/wEA
+        AYoBqwH/AQABwQHeAf8BLAH8Af4B/wEBAdgB7wH/AxkB/wPgAf8DNwH/A1gBtwgAAX4BeAFfAfwB3wHT
+        AbgB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/
+        AeAB1QG6Af8B3gHTAbgB/wF+AXkBXwH8A1oBvQF7AW8BYAHzAb4BrwGVAf0BnAF4AV4B/wE2AZUB0AH/
+        AaAB5QH7Af8BPgGnAd0B/wHdAfoC/wHaAfkC/wHbAfoC/wHdAfwC/wFdAl8BzgQAASwBkgHSAf8B3AH9
+        Av8B2gH7Av8BKgGNAc0B/wEvAZEBzgH/ATMBlAHQAf8DVgGwFAADDAEQAVMBaAGBAfQBlwHCAfYB/wGY
+        AcMB9wH/AVMBaAGBAfQDDgESFAADVQG0A/IB/wO/Af8D5wH/AyUB/wEAAY8BrwH/AQABugHcAf8BAAG9
+        Ad4B/wEAAcoB5AH/AQABvwHfAf8DJQH/A+cB/wM6Af8DVQG0A1UBtANJAYcDXwHJAaoBigF+AfwB3wHT
+        AbgB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHgAdUBugH/AeAB1QG6Af8B4AHVAboB/wHfAdMBuAH/
+        AaoBigF+AfwDXQHHBAADJQE3A1sBwAGcAXgBXgH/ATMBkwHPAf8BwQH3Av8BRwG1AeUB/wElAYkBygH/
+        ASUBigHLAf8BKAGMAcwB/wEvAZIBzwH/ATUBlwHTAf8EAANVAawBMwGUAdAB/wEzAZQB0AH/AVICVAGo
+        JAADSgGJAWMBdwGRAfYBbAGDAZsB9wNKAYkYAANWAbID9wH/A8oB/wP3Af8DLwH/AQABrgHQAf8BAAGu
+        AdAB/wEAAa4B0AH/AQABrwHQAf8BAAGuAdAB/wMvAf8D8AH/A4EB/wNWAbIDZQHsA1YBsgMXAR8DXwHJ
+        AX4BeAFfAfwBnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BnAF4AV4B/wGcAXgBXgH/AZwBeAFeAf8BfgF4
+        AV8B/ANfAcgDFgEeDAADKQE+ATEBkgHPAf8B0gH5Av8BtgHwAv8B3AH9Av8B3wP/AeUD/wE0AZUB0AH/
+        PAADDgESAVoBbgGFAfUBWgFuAYUB9QMOARIYAANVAa8DYQHaA8QB/wP8Af8DigH/AzcB/wM3Af8DNwH/
+        AzcB/wM3Af8DigH/A/gB/wOJAf8DNgH/A50B/wNVAa9AAAEzAZQB0AH/AdwB/QL/AdoB+wL/ASsBjwHN
+        Af8BMAGSAc8B/wE0AZUB0AH/A1UBr0AAA0sBjANLAYscAANHAYIDPQFnA0sBjQT/A8sB/wP+Af8D/gH/
+        A/4B/wP+Af8D/gH/A8sB/wP+Af8DnAH/A1UBrQNhAesDVQGtQAABWQJnAe8BMwGUAdAB/wEzAZQB0AH/
+        AVwCZQHnTAADDwETAw8BEyQAAzEBTQM8AWYDPAFmAzwBZgM8AWYDPAFmAzwBZgM8AWYDPAFmAzwBZgNV
+        AawDRgGBA1UBrANGAYFAAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/gQAB/wGA
+        AucF/wGAAeEBhwHAAQMD/wGAAeABBwHAAQMC/wHwAQAB4AEHAcABAwEAAQ4B8AEAAeABBwHAAQMBAAEI
+        AfcBgAHgAQcBwAEDAgAB9wGAAcABAwHAAQMCAAH3AoABAQHAAQMCAAEBAYADAAEDBwABAwQAAcABAwEA
+        AQMDAAGAAfgBHwMAAQgBAAGHAfwBPwMAAQ4BAQH/AfwBPwIAAv8BAQH/Af4BfwIAAv8BDwH/Af4BfwHA
+        AQAC/ws=
 </value>
   </data>
   <metadata name="ttTabs.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
